prusti-tests/tests/verify_safe_clients/fail/dev_tests/loops.rs
use prusti_contracts::*;

fn good() {
    loop {}
    panic!(); // Ok, unreachable
}

fn bad() {
    panic!(); //~ ERROR
    loop {}
}

fn main() {}
